spacing and size fixes

--- a/style.css
+++ b/style.css
@@ -53,6 +53,12 @@ span svg {
 .paddingBetweenCols td {
  padding: 0 15px;
 }
+.paddingleft {
+  padding-left: 1em;
+}
+.negpaddingleft {
+  padding-left: -1em;
+}
 .about {
  position: relative;
  min-height: 100%;
